:construction: Added webpack public url, updating testing files

--- a/test/html/custom_context.tpl.html
+++ b/test/html/custom_context.tpl.html
@@ -24,7 +24,7 @@
 <%= htmlWebpackPlugin.tags.bodyTags %>
 
 <script>
-    var instance = fluidPlayer('fluid-player-e2e-case', {
+    var instance = wwPlayer('fluid-player-e2e-case', {
         layoutControls: {
             contextMenu: {
                 controls: true,
