--- a/test/html/vod_basic_by_ref.tpl.html
+++ b/test/html/vod_basic_by_ref.tpl.html
@@ -25,7 +25,7 @@
 
 <script>
     const target = document.querySelector('video[data-ref="player-by-ref"]');
-    const instance = fluidPlayer(target);
+    const instance = wwPlayer(target);
 </script>
 
 </body>
