--- a/test/html/vod_basic_vr.tpl.html
+++ b/test/html/vod_basic_vr.tpl.html
@@ -22,7 +22,7 @@
 <%= htmlWebpackPlugin.tags.bodyTags %>
 
 <script>
-    var instance = fluidPlayer('fluid-player-e2e-case', {
+    var instance = wwPlayer('fluid-player-e2e-case', {
         layoutControls: {
             showCardBoardView: true,
             showCardBoardJoystick: true
