--- a/test/html/vod_reponsive.tpl.html
+++ b/test/html/vod_reponsive.tpl.html
@@ -58,7 +58,7 @@
         videoContainer.classList.toggle('resized');
     });
 
-    var instance = fluidPlayer('fluid-player-e2e-case', {
+    var instance = wwPlayer('fluid-player-e2e-case', {
         layoutControls: {
             fillToContainer: true
         }
