--- a/test/html/hls_vod.tpl.html
+++ b/test/html/hls_vod.tpl.html
@@ -16,13 +16,18 @@
 <body>
 
 <video id="fluid-player-e2e-case">
-    <source src="https://multiplatform-f.akamaihd.net/i/multi/will/bunny/big_buck_bunny_,640x360_400,640x360_700,640x360_1000,950x540_1500,.f4v.csmil/master.m3u8" type="application/x-mpegURL"/>
+    <source src="https://vod-qa.immerss.live/1725/channels/481/a52f1e5e17117f566bfd65e6c6c417ad/playlist.m3u8" type="application/x-mpegURL">
+<!--    <source src="https://multiplatform-f.akamaihd.net/i/multi/will/bunny/big_buck_bunny_,640x360_400,640x360_700,640x360_1000,950x540_1500,.f4v.csmil/master.m3u8" type="application/x-mpegURL"/>-->
 </video>
 
 <%= htmlWebpackPlugin.tags.bodyTags %>
-
+<script src="../../dist/wwplayer.min.js"></script>
 <script>
-    var instance = fluidPlayer('fluid-player-e2e-case');
+    var instance = wwPlayer('fluid-player-e2e-case', {
+        modules: {
+            enabled: ['Streaming']
+        }
+    });
 </script>
 
 </body>
