--- a/test/html/vod_basic_multiple.tpl.html
+++ b/test/html/vod_basic_multiple.tpl.html
@@ -35,8 +35,8 @@
 <%= htmlWebpackPlugin.tags.bodyTags %>
 
 <script>
-    var firstInstance = fluidPlayer('fluid-player-e2e-case-1');
-    var secondInstance = fluidPlayer('fluid-player-e2e-case-2');
+    var firstInstance = wwPlayer('fluid-player-e2e-case-1');
+    var secondInstance = wwPlayer('fluid-player-e2e-case-2');
 </script>
 
 </body>
