:construction: Fix contextmenu

--- a/test/html/hls_vod.tpl.html
+++ b/test/html/hls_vod.tpl.html
@@ -37,10 +37,10 @@
             mute: true,
             contextMenu: {
                 controls: false,
-                links: [
+                links   : [
                     {
-                        href: 'https://google.com',
-                        label: 'google'
+                        href : 'https://immerss.live',
+                        label: `<span>Powered by IMMERSS</span>`
                     }
                 ]
             }
