--- a/test/html/hls_vod.tpl.html
+++ b/test/html/hls_vod.tpl.html
@@ -18,6 +18,8 @@
 <video id="fluid-player-e2e-case">
     <source src="https://vod-qa.immerss.live/1725/channels/481/a52f1e5e17117f566bfd65e6c6c417ad/playlist.m3u8"
             type="application/x-mpegURL">
+    <!--<source src="https://fcc3ddae59ed.us-west-2.playback.live-video.net/api/video/v1/us-west-2.893648527354.channel.xhP3ExfcX8ON.m3u8"
+            type="application/x-mpegURL">-->
     <!--    <source src="https://multiplatform-f.akamaihd.net/i/multi/will/bunny/big_buck_bunny_,640x360_400,640x360_700,640x360_1000,950x540_1500,.f4v.csmil/master.m3u8" type="application/x-mpegURL"/>-->
 </video>
 
@@ -30,7 +32,18 @@
             onAfterAllModulesInit: () =>
             {
                 console.log('onAfterAllModulesInit');
-            }
+            },
+            onAfterInitHls: hls => {
+                // onFragParsingMetadata
+                // hls.on(Hls.Events.FRAG_CHANGED,function(event,data) {
+                //     const dateTime = data.frag.programDateTime;
+                //     const date = new Date(new Date(dateTime).toISOString());
+                //     console.log('[FRAG_CHANGED] current dateTime- ', date);
+                // });
+                hls.on(Hls.Events.MANIFEST_LOADED,function(event,data) {
+                    console.log('[MANIFEST_PARSED]', data);
+                });
+            },
         },
         layoutControls: {
             autoPlay: true,
@@ -43,57 +56,13 @@
                         label: `<span>Powered by IMMERSS</span>`
                     }
                 ]
-            }
+            },
+            controlFullscreen: false,
+            fullscreenHandler: () => console.log('fullscreenHandler'),
         },
     });
 
-    function trackHls() {
-        // Object.keys(Hls.Events).forEach(function (e) {
-        //     instance.hlsInstance().on(Hls.Events[e], console.info.bind(console));
-        // });
-        // hlsFragLoading
-        let init = false;
-        const helperPlay = () =>
-        {
-            if (!init) {
-                init = true;
-                console.log(
-                    'playing', instance.isCurrentlyPlayingVideo()
-                );
-            }
-        };
-        instance.hlsInstance().on('hlsFragLoading', event =>
-        {
-            helperPlay();
-        });
-    }
 
-    // instance.hlsInstance().on(Hls.Events[e], console.info.bind(console));
-
-    function helper() {
-        console.log('isCurrentlyPlayingVideo-', instance.isCurrentlyPlayingVideo());
-        if (!instance.isCurrentlyPlayingVideo())
-        {
-            console.log('muted-', instance.isMuted());
-            if (!instance.isMuted()) {
-                instance.muteToggle();
-            }
-
-            setTimeout(() => {
-                instance.play();
-                console.log('play');
-            }, 5000);
-        }
-    }
-
-    setTimeout(() =>
-    {
-        // if (!instance.isCurrentlyPlayingVideo() && !instance.isMuted())
-        // {
-        //     instance.muteToggle();
-        //     instance.play();
-        // }
-    }, 10);
 </script>
 
 </body>
