:construction: custom controls

--- a/test/html/hls_vod.tpl.html
+++ b/test/html/hls_vod.tpl.html
@@ -16,10 +16,10 @@
 <body>
 
 <video id="fluid-player-e2e-case">
-    <source src="https://vod-qa.immerss.live/1725/channels/481/a52f1e5e17117f566bfd65e6c6c417ad/playlist.m3u8"
-            type="application/x-mpegURL">
-    <!--<source src="https://fcc3ddae59ed.us-west-2.playback.live-video.net/api/video/v1/us-west-2.893648527354.channel.xhP3ExfcX8ON.m3u8"
+    <!--<source src="https://vod-qa.immerss.live/1725/channels/481/a52f1e5e17117f566bfd65e6c6c417ad/playlist.m3u8"
             type="application/x-mpegURL">-->
+    <source src="https://fcc3ddae59ed.us-west-2.playback.live-video.net/api/video/v1/us-west-2.893648527354.channel.xhP3ExfcX8ON.m3u8"
+            type="application/x-mpegURL">
     <!--    <source src="https://multiplatform-f.akamaihd.net/i/multi/will/bunny/big_buck_bunny_,640x360_400,640x360_700,640x360_1000,950x540_1500,.f4v.csmil/master.m3u8" type="application/x-mpegURL"/>-->
 </video>
 
