:construction: Updating options

--- a/test/html/hls_vod.tpl.html
+++ b/test/html/hls_vod.tpl.html
@@ -89,6 +89,7 @@
                 ]
             },
             controlFullscreen: false,
+            controlPanel: false,
             fullscreenHandler: () => console.log('fullscreenHandler'),
         },
     });
