:construction: Removing "onAfterAllModulesInit" method

--- a/test/html/hls_vod.tpl.html
+++ b/test/html/hls_vod.tpl.html
@@ -47,7 +47,7 @@
             enabled: ['Streaming'],
             onAfterAllModulesInit: () =>
             {
-                // console.log('onAfterAllModulesInit');
+                console.log('onAfterAllModulesInit');
                 instance.on('ended', events =>
                 {
                     console.log('ended', events);
