--- a/test/html/hls_vod.tpl.html
+++ b/test/html/hls_vod.tpl.html
@@ -9,7 +9,7 @@
     <%= htmlWebpackPlugin.tags.headTags %>
     <style lang="css">
         #fluid-player-e2e-case {
-            width: 70%;
+            width: 50%;
         }
         .ww_custom_control.live-badge-control {
             position: absolute;
@@ -70,13 +70,14 @@
             },
         },
         layoutControls: {
-            customControls: [
-                {
-                    className: 'live-badge-control',
-                    innerHTML: `<svg viewBox="0 0 120 120" width="12" height="12" version="1.1" fill="red" xmlns="http://www.w3.org/2000/svg"><circle cx="60" cy="60" r="50"/></svg><span class="live-badge">Live</span>`
-                }
-            ],
-            controlDuration: false,
+            // customControls: [
+            //     {
+            //         className: 'live-badge-control',
+            //         innerHTML: `<svg viewBox="0 0 120 120" width="12" height="12" version="1.1" fill="red" xmlns="http://www.w3.org/2000/svg"><circle cx="60" cy="60" r="50"/></svg><span class="live-badge">Live</span>`
+            //     }
+            // ],
+            // controlDuration: true,
+            controlProgress: false,
             autoPlay: true,
             mute: true,
             contextMenu: {
@@ -89,7 +90,7 @@
                 ]
             },
             controlFullscreen: false,
-            controlPanel: false,
+            // controlPanel: false,
             fullscreenHandler: () => console.log('fullscreenHandler'),
         },
     });
