--- a/test/html/hls_vod.tpl.html
+++ b/test/html/hls_vod.tpl.html
@@ -47,9 +47,15 @@
         // videoEl.innerHTML = `
         // <source src="https://vod-uat.immerss.live/4250/13545/9ec05f0ec166bb5861b20d4106a793a2/playlist.m3u8"
         //     type="application/x-mpegURL">`;
+        // videoEl.innerHTML = `
+        // <source src="https://fcc3ddae59ed.us-west-2.playback.live-video.net/api/video/v1/us-west-2.893648527354.channel.xhP3ExfcX8ON.m3u8"
+        //     type="application/x-mpegURL">`;
+        // videoEl.innerHTML = `
+        // <source src="//cdn.theoplayer.com/video/elephants-dream/playlist.m3u8" type="application/x-mpegURL">`;
+
+        // https://5d6e17f1ca731.streamlock.net/LowLatencyBBB/myStream/playlist.m3u8
         videoEl.innerHTML = `
-        <source src="https://fcc3ddae59ed.us-west-2.playback.live-video.net/api/video/v1/us-west-2.893648527354.channel.xhP3ExfcX8ON.m3u8"
-            type="application/x-mpegURL">`;
+        <source src="https://ll-hls-test.apple.com/llhls1/multi.m3u8" type="application/x-mpegURL">`;
         document.body.append(videoEl);
 
         window.instance = wwPlayer(videoEl, {
@@ -65,6 +71,12 @@
                 }
             },
             layoutControls: {
+                customControls: [
+                    {
+                        className: 'live-badge-control',
+                        innerHTML: `<svg viewBox="0 0 120 120" width="12" height="12" version="1.1" fill="red" xmlns="http://www.w3.org/2000/svg"><circle cx="60" cy="60" r="50"/></svg><span class="live-badge">Live</span>`
+                    }
+                ],
                 controlProgress: true,
                 autoPlay: true,
                 mute: true,
@@ -77,6 +89,7 @@
                         }
                     ]
                 },
+                controlDuration: false,
                 controlFullscreen: false,
             },
         });
