--- a/test/html/hls_vod.tpl.html
+++ b/test/html/hls_vod.tpl.html
@@ -200,7 +200,7 @@
 
         // https://5d6e17f1ca731.streamlock.net/LowLatencyBBB/myStream/playlist.m3u8
         videoEl.innerHTML = `
-        <source src="https://5d6e17f1ca731.streamlock.net/LowLatencyBBB/myStream/playlist.m3u8" type="application/x-mpegURL">`;
+        <source src="https://vod-uat.immerss.live/immerss-live-vod-uat/112/a8e84c98-abb5-44ef-bf61-68fb06bd1b06/playlist.m3u8" type="application/x-mpegURL">`;
         document.body.append(videoEl);
 
         window.instance = wwPlayer(videoEl, {
@@ -209,7 +209,7 @@
                 configureHls: options =>
                 {
                     options.enableWorker     = true;
-                    options.lowLatencyMode   = true;
+                    // options.lowLatencyMode   = true;
                     // options.backBufferLength = 90;
                     // options.liveSyncDurationCount = 5;
                     return options;
